--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ footer div {
   text-align: right;
 }
 
-footer div a {
+footer a {
   color: #024e76;
 }
 section {
@@ -128,6 +128,15 @@ section {
   text-align: center;
 }
 
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+}
+
+/* different from Snapshot */
 .intro h2 {
   display: inline-block;
   font-size: 55px;
@@ -139,7 +148,31 @@ section {
 
 .steps {
   text-align: center;
-  background-color: #fce138;
+  background: #fce138;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
 }
 
 .section-title {
@@ -159,25 +192,49 @@ section {
   border-color: #39a6b2;
 }
 
-.steps div {
-  margin-bottom: 80px;
+.trainers {
+  text-align: center;
 }
 
-.steps img {
-  width: 15%;
-  margin: 10px 0;
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
 }
 
-.steps h3 {
-  color: #024e76;
-  font-size: 46px;
+.trainer img {
+  width: 35%;
+  float: left;
 }
 
-.steps p {
-  color: #39a6b2;
-  font-size: 23px;
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
 }
 
-.steps span {
-  font-size: 38px;
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
