--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ header {
   /* applies 20px to the top and bottom, then 35px to the left and right */
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -22,7 +25,6 @@ header h1 {
   font-weight: bold;
   color: #fce138;
   margin: 0;
-  display: inline;
 }
 
 header a {
@@ -31,7 +33,6 @@ header a {
 }
 
 header nav {
-  float: right;
   /* applies 7px to the top and bottom, then 0px to the left and right */
   margin: 7px 0;
 }
