--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,14 +261,6 @@ section {
   font-size: 17px;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 /* reach out styles start */
 .contact {
   background: #024e76;
@@ -278,17 +270,18 @@ section {
   color: #fce138;
 }
 
-.contact-info iframe {
-  width: 400px;
-  height: 400px;
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex:1;
+  margin: 15px;
 }
 
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
   color: white;
 }
 
@@ -301,7 +294,7 @@ section {
 .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
 }
 
@@ -309,6 +302,27 @@ section {
   color: #fce138;
 }
 /* reach out styles end */
+
+.contact-info input, 
+.contact-info textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #024e76;
+  color: #fce138;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+}
 
 .flex-row {
   display: flex;
