--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header nav ul {
 }
 
 header nav ul li a {
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
 }
@@ -83,9 +83,10 @@ section {
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
   background-position: center;
-  display:flex;
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .hero-cta {
@@ -94,13 +95,13 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;;
+  color: #fce138;
 }
 
 .hero-form {
@@ -206,7 +207,7 @@ section {
 }
 
 .section-title {
-  font-size: 55px;
+  font-size: 48spx;
   color: #024e76;
   border-bottom: 3px solid;
   padding-bottom: 20px;
@@ -277,7 +278,7 @@ section {
 }
 
 .contact-info > * {
-  flex:1;
+  flex: 1;
   margin: 15px;
 }
 
@@ -303,7 +304,7 @@ section {
 }
 /* reach out styles end */
 
-.contact-info input, 
+.contact-info input,
 .contact-info textarea {
   border: 1px solid #024e76;
   display: block;
@@ -326,4 +327,26 @@ section {
 
 .flex-row {
   display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    /* this will be applied on any screen smaller than 980px */
+  }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+  header h1 {
+    /* this will be applied on any screen between 768px and 575px */
+    font-size: 80px;
+  }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+  /* this will be applied on any screen smaller than 575px */
+  header h1 {
+    font-size: 100px;
+  }
 }
